<resources>
    <string name="app_name">Mobilprog_project</string>
    <string name="welcome_message">Mobile programming project</string>
    <string name="start_activity_explicit">Start Activtiy with explicit</string>
    <string name="start_activity_implicit">Start activity with implicit</string>
    <string name="ask_age">When did you born?</string>
    <string name="send">Send</string>
    <string name="your_age">Your age</string>
    <string name="error">An error occured</string>
    <!-- Strings used for fragments for navigation -->

    <string name="adapteractivity">Start adapter activity</string>
    <string name="subjects">Subjects</string>
    <string name="credit">Credit:</string>
    <string name="name">Name:</string>
    <string name="code">Code:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="newSubject">New subject</string>
</resources>